--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 
-spring.jackson.date-format=dd-MM-yyyy hh:mm:ss
+spring.jackson.date-format=yyyy-MM-dd 
 
 spring.jpa.hibernate.ddl-auto=update
