--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/kapralov_coursework_bd
 spring.datasource.username=postgres
-spring.datasource.password=Andreas1321
+spring.datasource.password=Qwerty12345
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
